# tt-smi

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  SUMMARY.md  compile.sh  input.json  main.py  pyproject.toml  reset-board.sh  reset-through-adafruit-ftdi.py  setup.py  utils_common.py
.github/workflows/: bh-update-status-by-label.yml  build-all.yml  build-and-release-whls.yaml  build-debian.yml  build-pyinstaller.yml  build-pypi-arm64.yml  build-pypi.yml  helloworld.yml  release.yml  test.yml
debian/: changelog  control  copyright  py3dist-overrides  rules
support_scripts/: xenstore_watch.sh
tests/: conftest.py  detect_devices_test.py  test_reset.py  test_snapshot.py  test_utils.py  test_widgets_app.py
tt-smi/: constants.py  log.py  tt_smi_app.py  utils.py
tt_smi/: __init__.py  __main__.py  backend.py  colors.py  common_style.css  constants.py  device_input.py  frontend.py  gs_tensix_reset.py  latest_releases.py  log.py  registers.py  reset.py  tt_smi.py  tt_smi_backend.py  tt_smi_dal_backend.py  tt_smi_frontend.py  tt_smi_reset.py  tt_smi_style.css  tt_smi_utils.py  ui_utils.py  utils.py  version.py
tt_smi/data/grayskull/: axi-pci.yaml  fw_defines.yaml
tt_smi/data/grayskull/arc/: csm.yaml  reset.yaml
tt_smi/resets/: gs_tensix_reset.py  wh_resets.py
tt_smi/tests/: detect_devices_test.py  print_reset_registers.py  reset_test.py  test_clks_safe_reset.py  test_tensix_reset.py  test_widgets_app.py
tt_smi/ui/: common_style.css  common_themes.py  common_widgets.py
tt_utils_common/: __init__.py  utils_common.py
ui/: common_themes.py  common_widgets.py
