[project]
name = "tt-smi"
version = "2.2.0"
description = "ncurses based hardware monitoring for Tenstorrent silicon"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
  { name = "Sam Bansal", email = "sbansal@tenstorrent.com" }
]
maintainers = [
  { name = "Sam Bansal", email = "sbansal@tenstorrent.com" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console :: Curses",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  'black==24.3.0',
  'distro==1.8.0',
  'elasticsearch==8.11.0',
  'jsons==1.6.3',
  'linkify-it-py==2.0.2',
  'pydantic==1.*',
  'psutil==5.9.6',
  'pyyaml==6.0.1',
  'pyluwen @ git+https://github.com/tenstorrent/luwen.git@v0.3.6#subdirectory=crates/pyluwen',
  'tt_tools_common @ git+https://github.com/tenstorrent/tt-tools-common.git@v1.4.1',
  'rich==13.7.0',
  'textual==0.42.0',
  'pre-commit==3.5.0',
  'importlib_resources==6.1.1',
]

[project.urls]
"Homepage" = "http://tenstorrent.com"
"Bug Reports" = "https://github.com/tenstorrent/tt-smi/issues"
"Source" = "https://github.com/tenstorrent/tt-smi"

[project.scripts]
tt-smi = "tt_smi:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = [
  'data/version.txt',
  "*.css",
  "data/*/*.yaml",
  "data/*/*/*.yaml",
]

[tools.setuptools.exclude-package-data]
"*" = [
  'build',
]

[tool.setuptools.packages.find]
where = [ ".", ]

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = [
  "setuptools>=43.0.0",
  "wheel"
]
build-backend = "setuptools.build_meta"

# vim: expandtab:ts=2:sw=2:ai
