[project]
name = "tt-smi"
version = "3.1.0"
description = "ncurses based hardware monitoring for Tenstorrent silicon"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  { name = "Sam Bansal", email = "sbansal@tenstorrent.com" }
]
maintainers = [
  { name = "Sam Bansal", email = "sbansal@tenstorrent.com" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console :: Curses",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  'distro>=1.8.0',
  'elasticsearch>=8.11.0',
  'pydantic>=1.2',
  'tt_tools_common~=1.5',
  'pyluwen~=0.8.0',
  'rich>=13.7.0',
  'textual>=0.59.0',
  'pre-commit>=3.5.0',
  'tomli',
]

optional-dependencies.dev = [
  "black == 24.10.0; python_version >= '3.9'",
  "black == 24.8.0; python_version == '3.8'",
  "black == 23.3.0; python_version == '3.7'"
]

optional-dependencies.test = [
  "pytest",
]

[project.urls]
"Homepage" = "http://tenstorrent.com"
"Bug Reports" = "https://github.com/tenstorrent/tt-smi/issues"
"Source" = "https://github.com/tenstorrent/tt-smi"

[project.scripts]
tt-smi = "tt_smi:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = [
  'data/version.txt',
  "*.css",
  "data/*/*.yaml",
  "data/*/*/*.yaml",
]

[tool.setuptools.exclude-package-data]
"*" = [
  'build',
  'debian',
  'images',
]

[tool.setuptools.packages.find]
where = [ ".", ]

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = [
  "setuptools>=43.0.0",
  "wheel"
]
build-backend = "setuptools.build_meta"

# vim: expandtab:ts=2:sw=2:ai
